# dududu

HeadBend/: CMakeLists.txt  Calibrate.ini  setting.ini  stable.h
HeadBend/app/: app.pri  appconfig.cpp  appconfig.h  appevent.cpp  appevent.h  appinit.cpp  appinit.h  appkey.cpp  appkey.h  appnav.cpp  appnav.h
HeadBend/form/: form.pri  frmconfig.cpp  frmconfig.h  frmconfig.ui  frmconfig1.cpp  frmconfig1.h  frmconfig1.ui  frmdata.cpp  frmdata.h  frmdata.ui  frmdata1.cpp  frmdata1.h  frmdata1.ui  frmdata2.cpp  frmdata2.h  frmdata2.ui  frmdatalog.cpp  frmdatalog.h  frmdatalog.ui  frmmain.cpp  frmmain.h  frmmain.ui  frmshowcurve.cpp  frmshowcurve.h  frmshowcurve.ui  frmview.cpp  frmview.h  frmview.ui  frmview1.cpp  frmview1.h  frmview1.ui  frmview2.cpp  frmview2.h  frmview2.ui  frmviewdevice.cpp  frmviewdevice.h  frmviewdevice.ui
HeadBend/imgAI/: imgAI.h
HeadBend/imgAI/Det/: HalconDet.cpp  HalconDet.h  HalconDetInfer.cpp  HalconDetInfer.h
HeadBend/imgAI/ModelManager/: ModelManager.cpp  ModelManager.h
HeadBend/imgAI/OCR/: HalconOCR.cpp  HalconOCR.h  HalconOCRInfer.cpp  HalconOCRInfer.h
HeadBend/imgAI/Preprocess/: HalconPreprocessing.cpp  HalconPreprocessing.h
HeadBend/imgAI/Tool/: ImgProcessTool.cpp  ImgProcessTool.h
HeadBend/imgAI/Tracker/: AutomaticStateMachine.cpp  AutomaticStateMachine.h  SORTTracker.cpp  SORTTracker.h
HeadBend/main/: MyApplication.cpp  MyApplication.h  halcon_inc.h  head.h  main.cpp  qlog_inc.h
HeadBend/usercontrol/: devicesizetable.cpp  framelesshelper.h  usercontrol.pri
Inc/MVS/Includes/: MvCamera.cpp  MvCamera.h  myAngleProcess.cpp  myAngleProcess.h  myCameraGigE.cpp  myCameraGigE.h  myCameraProcess.cpp
Inc/MVS/Libraries/: MvCameraControl.lib
Inc/QsLog/: ZLog.h
Inc/core_db/: dbcleanthread.cpp  dbcleanthread.h  dbconnthread.cpp  dbconnthread.h  dbdelegate.cpp  dbdelegate.h  dbhead.h  dbhelper.cpp  dbhelper.h  dbhttpthread.cpp  dbhttpthread.h  dbpage.cpp  dbpage.h  dbpagemodel.cpp  dbpagemodel.h
Inc/customgraphics/: customgraphics.cpp  customgraphics.h
Inc/customplot/: putText.cpp  putText.h
Inc/global_data/: GlobalData.cpp  GlobalData.h
Inc/halcon/include/com/: HalconCOM.h  HalconXimport.idl
Inc/ini/: settings.cpp  settings.h
Inc/mulThread/: HotChargingImgPro.cpp  HotChargingImgPro.h  ImageProcessor.cpp  ImageProcessor.h  ImgProGlobal.h  StackerTableImgPro.cpp  StackerTableImgPro.h  WorkerCamera.cpp  WorkerCamera.h  WorkerImageProcess.cpp  WorkerImageProcess.h  WorkerSample.cpp  WorkerSample.h  Workstation.cpp  Workstation.h  mqttDataStructure.h  performancetimer.cpp  performancetimer.h  ppcimgprocess.cpp  ppcimgprocess.h  workStationDataStructure.h  workerdatabase.cpp  workerdatabase.h  workermqtt.cpp  workermqtt.h  workertrigger.cpp  workertrigger.h
Inc/oracleDB/: orcldata.cpp  orcldata.h
Inc/qtpropertybrowser/: qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
Inc/shareMemory/: ShareMem.cpp  ShareMem.h  SharedMemoryDataStructure.h  SharedMemoryManager.cpp  SharedMemoryManager.h  mysharemem.cpp  mysharemem.h
